syntax = "proto3";

// Define a message type representing a person
message Person {
    string name = 1;
    int32 age = 2;
}

service PersonService {
    // Add a person to the address book
    rpc AddPerson(Person) returns (Person);

    // Get a person by their name
    rpc GetPersonByName(GetPersonByNameRequest) returns (Person);

    // Delete a person by their name
    rpc DeleteUserByName(GetPersonByNameRequest) returns (Person);
}

message GetPersonByNameRequest {
    string name = 1;
}